--- a/src/app/pages/home/homepage/homepage.component.html
+++ b/src/app/pages/home/homepage/homepage.component.html
@@ -25,11 +25,9 @@
             <li><a routerLink="/product/travel">Asuransi Perjalanan</a></li>
           </ul>
         </li>
-          <li class="drop-down"><a [routerLink] = "['/']"  fragment="/ourproduct">Claim</a>
+          <li class="drop-down"><a [routerLink] = "['/']"  fragment="/ourproduct">Klaim</a>
             <ul>
               <li><a routerLink="/claim/pas">Asuransi Kecelakaan Diri</a></li>
-              <li><a routerLink="/claim/pars">Asuransi Properti/ Harta Benda</a>
-              </li>
               <li><a routerLink="/claim/travels">Asuransi Perjalanan</a></li>
             </ul>
           </li>
