--- a/src/app/pages/home/product/product-pa/product-pa.component.html
+++ b/src/app/pages/home/product/product-pa/product-pa.component.html
@@ -256,8 +256,14 @@
     <div class="row" data-aos="zoom-out">
       <div class="col-lg-9 text-center text-lg-left">
       </div>
+      <div class="row">
+
+      </div>
       <div class="col-lg-3 cta-btn-container text-center">
-        <a type="button" data-toggle="modal" data-target="#exampleModal" class="cta-btn align-middle" href="#">Beli Produk</a>
+
+          <a type="button" class="cta-btn align-middle" routerLink="/claim/pas">Klaim Asuransi</a>
+          <a type="button" data-toggle="modal" data-target="#exampleModal" class="cta-btn align-middle" >Beli Produk</a>
+
       </div>
     </div>
   </div>
