--- a/src/app/pages/home/product/product-travel/product-travel.component.html
+++ b/src/app/pages/home/product/product-travel/product-travel.component.html
@@ -239,6 +239,7 @@
 
       </div>
       <div class="col-lg-3 cta-btn-container text-center">
+        <a type="button" class="cta-btn align-middle" routerLink="/claim/travels">Klaim Asuransi</a>
         <a  type="button" data-toggle="modal" data-target="#exampleModal" class="cta-btn align-middle" href="#">Beli Produk</a>
       </div>
     </div>
