--- a/src/app/pages/master/auth/register/register.component.html
+++ b/src/app/pages/master/auth/register/register.component.html
@@ -153,6 +153,21 @@
                     </small>
                   </div>
                 </div>
+                <div class="form-group">
+                  <label>Admin</label>
+                  <select class="form-control" formControlName="role">
+                    <option>Admin</option>
+                    <option>Checker</option>
+                  </select>
+                  <div class="row ml-2">
+                    <small *ngIf="form('role').invalid && (form('role').dirty || (form('role').touched))"
+                           class="text text-danger float-left">
+                      <div *ngIf="form('role').errors?.required">
+                        Role admin harus di isi
+                      </div>
+                    </small>
+                  </div>
+                </div>
               </div>
               <button type="submit" class="btn btn-custom mt-3" style="border-radius: 20px; width: 300px; margin-bottom: 50px; margin-left: 180px; height: 50px"
                       [disabled]="registerForm.invalid || isErrorValidation">Daftar
